UPDATE students SET type = 'student';

[6. Add Column profile_picture]
ALTER TABLE `students`  ADD `profile_picture` VARCHAR(255) NULL;

[7. Add Column bio ]
ALTER TABLE `students`  ADD `bio` TEXT NULL;

[8. Add Column active ]
ALTER TABLE `students`  ADD `active` BOOLEAN NULL;

[9. Add Column Title]
ALTER TABLE `students`  ADD `title` VARCHAR(50) NULL;

[10. Combine Students and Staff Table]
INSERT INTO `students` (`first_name`,`last_name`,`phone`,`email`,`bio`,`active`,`title`,`type`) SELECT staff_fname, staff_lname, staff_phone, staff_email, staff_bio, staff_active,staff_title,type FROM staff;


----------------- USERS TABLE modifications ----------------

[11. Created Users table]
Use users01122016.sql
I used PHPmyadmin to import/export so you might run into errors.

[12. rename student_id to id]
ALTER TABLE `users` CHANGE `student_id` `id` INT(11) NOT NULL AUTO_INCREMENT;

[15. Rename 'type' column to 'role' to better suit user types]
ALTER TABLE users CHANGE type role varchar(10)

[16. Drop the title column. Not sure why that was in there]
ALTER TABLE users DROP COLUMN title;

[17. Added updated_at column so we know when the user was last updated]
ALTER TABLE users ADD COLUMN updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP;


------------ Students_Courses table ------------

[13. Add id column]
ALTER TABLE `students_courses` ADD COLUMN `id` INT PRIMARY KEY NOT NULL AUTO_INCREMENT FIRST;

[14ish. Rename column student_id to user_id] ** this has not been truly added yet
ALTER TABLE `reou`.`students_courses` 
CHANGE COLUMN `student_id` `user_id` INT(11) NOT NULL COMMENT '' ;

------------------------- course_category Table --------------------

14. ALTER TABLE `course_category` ADD COLUMN `image_filename` VARCHAR(255) NULL;


















Other Notes
-------------------------------
Getting image uploading to work.

1. In terminal do ps aux | grep httpd
2. First column show who owns the process
3. 